--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,113 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  /* background-color: rgba(236, 185, 176, 255); */
+  background-color: #fcab9c;
+  /* background-color: #f4e3d3; */
+  /* color: #32834b; */
+  color: #055c3c;
+  /* color: #d4543c; */
+  font-family: "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a {
+  color: inherit; /* blue colors for links too */
+  text-decoration: inherit; /* no underline */
+  cursor: pointer;
+}
+
+.startpage {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
+  padding: 0 20px;
+}
+
+.image {
+  font-size: 5rem;
+}
+
+.heading {
+  transform: translate(-50%, -50%);
+  font-weight: bold;
+  font-size: 2rem;
+  cursor: default;
+}
+
+.top-right {
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+  font-size: 1.5rem;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+.top-left {
+  font-size: 1.5rem;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+.bottom-left {
+  font-size: 1.5rem;
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+}
+
+.bottom-right {
+  font-size: 1.5rem;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+}
+
+.heart {
+  height: 50vh;
+}
+
+.more-info {
+  display: none;
+  height: 100vh;
+}
+
+.floating {
+  animation: float 6s ease-in-out infinite;
+}
+
+.parallax {
+  transform: translate(-50%, -50%);
+}
+
+@keyframes float {
+  0% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(-20px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+/* Media Query for Mobile Devices */
+
+@media only screen and (max-width: 767px) {
+  body {
+    font-size: 12px;
+  }
+
+  .bottom-left,
+  .bottom-right,
+  .top-left,
+  .top-right {
+    font-size: 1rem;
+  }
 }
