--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ a {
 body {
   margin: 0;
   overflow-x: hidden;
-  background-color: #ebb6b6;
+  background-color: #e6a69f;
   color: #325c3e;
   font-family: "Gotham", sans-serif;
   -webkit-font-smoothing: antialiased;
