--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,7 @@ body {
   font-family: "Gotham", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 16px;
 }
 
 body::-webkit-scrollbar {
